8
Added optional video recording in RemoteWebcamMultiSrv.

7
Added RemoteWebcamMultiSrv.

6
Added MJPEG support to server (method 3).
Added encodetype parameter to enable PNG.

5
Added Visual Studio 2012 and OpenCV 2.4.9 support.
Added captureperiod parameter and harmonization of configuration files.
Added no compression method (2).
First attempt to add UDP support (does not work...).
Minor corrections.

4
Added Android-specific options.

3
Added DISABLE_GUI_REMOTEWEBCAMSRV option to improve compatibility with Android.

2
Update to take into account changes in OSUtils and to use OpenCV 2.4.2, and use of the static libraries in Release.

1
Initial version.