@@ -22,4 +22,4 @@ int videoimgheight = 0;
 int captureperiod = 0;
 int timeout = 0;
 BOOL bUDP = FALSE;
-BOOL bDynamicWindowResizing = FALSE;
+BOOL bWindowResizedFromServer = FALSE;
