@@ -15,7 +15,7 @@ int LoadConfig()
 	captureperiod = 5;
 	timeout = 0;
 	bUDP = FALSE;
-	bDynamicWindowResizing = FALSE;
+	bWindowResizedFromServer = FALSE;
 
 	file = fopen("RemoteWebcamCli.txt", "r");
 	if (file != NULL)
@@ -35,7 +35,7 @@ int LoadConfig()
 		if (fgets3(file, line, sizeof(line)) == NULL) printf("Invalid configuration file.\n");
 		if (sscanf(line, "%d", &bUDP) != 1) printf("Invalid configuration file.\n");
 		if (fgets3(file, line, sizeof(line)) == NULL) printf("Invalid configuration file.\n");
-		if (sscanf(line, "%d", &bDynamicWindowResizing) != 1) printf("Invalid configuration file.\n");
+		if (sscanf(line, "%d", &bWindowResizedFromServer) != 1) printf("Invalid configuration file.\n");
 
 		//if (fgets3(file, line, sizeof(line)) == NULL) printf("Invalid configuration file.\n");
 		//if (sscanf(line, "%lf", &val) != 1) printf("Invalid configuration file.\n");
@@ -69,6 +69,8 @@ int LoadConfig()
 int recvdecode(void)
 {
 	unsigned int header[3];
+	char httpbuf[2048];
+	char* szContentLength = NULL;
 	unsigned int val = 0;
 	int nbBytes = 0;
 	int i = 0;
@@ -126,7 +128,89 @@ int recvdecode(void)
 			videoimgwidth = image->width;
 			videoimgheight = image->height;
 
-			if (bDynamicWindowResizing) cvResizeWindow("Client", videoimgwidth, videoimgheight);
+			if (bWindowResizedFromServer) cvResizeWindow("Client", videoimgwidth, videoimgheight);
+
+			databufnew = (char*)calloc(image->imageSize+3*sizeof(unsigned int), sizeof(char));
+			if (!databufnew)	
+			{
+				printf("realloc() failed.\n");
+				return EXIT_FAILURE;
+			}
+			free(databuf);
+			databuf = databufnew;
+		}
+	}
+	else if (strncmp((char*)header, "--boundary\r\n", 3*sizeof(unsigned int)) == 0)
+	{
+		// MJPEG.
+
+		memset(httpbuf, 0, sizeof(httpbuf));
+		// Get "Content-Type: image/jpeg\r\nContent-Length:".
+		if (recvall(s1, (char*)httpbuf, 41) != EXIT_SUCCESS)
+		{
+			return EXIT_FAILURE;
+		}
+		// Get "%d\r" with %d the JPEG image size, indicated in the HTTP Content-Length field.
+		if (recvuntil(s1, (char*)httpbuf+41, '\r', 10) != EXIT_SUCCESS)
+		{
+			return EXIT_FAILURE;
+		}
+		// Get "\n\r\n" that indicates the end of the HTTP header.
+		if (recvall(s1, (char*)httpbuf+strlen(httpbuf), 3) != EXIT_SUCCESS)
+		{
+			return EXIT_FAILURE;
+		}
+		szContentLength = strstr(httpbuf, "Content-Length");
+		if (szContentLength == NULL)
+		{
+			return EXIT_FAILURE;
+		}
+		if (sscanf(szContentLength, "Content-Length: %d\r\n", &nbBytes) != 1)
+		{
+			return EXIT_FAILURE;
+		}
+		header[1] = 1;
+		header[2] = nbBytes;
+
+		// Quick checks...
+		if (((int)header[1] < 0)||((int)header[2] < 0))
+		{
+			printf("Bad compression or transmission error.\n");
+			return EXIT_FAILURE;
+		}
+
+		mat = cvCreateMat(header[1], header[2], CV_8UC1);
+		if (mat == NULL)
+		{
+			printf("cvCreateMat() failed.\n");
+			return EXIT_FAILURE;
+		}
+
+		if (recvall(s1, (char*)mat->data.ptr, header[1]*header[2]) != EXIT_SUCCESS)
+		{
+			cvReleaseMat(&mat);
+			return EXIT_FAILURE;
+		}
+
+		imagenew = cvDecodeImage(mat, CV_LOAD_IMAGE_COLOR);
+		if (imagenew == NULL)
+		{
+			printf("cvDecodeImage() failed.\n");
+			cvReleaseMat(&mat);
+			return EXIT_FAILURE;
+		}
+		cvReleaseImage(&image);
+		image = imagenew;
+
+		cvReleaseMat(&mat);
+
+		// Resolution changed by server.
+		if ((image->width != videoimgwidth)||(image->height != videoimgheight))
+		{
+			videoimgwidth = image->width;
+			videoimgheight = image->height;
+
+			if (bWindowResizedFromServer) cvResizeWindow("Client", videoimgwidth, videoimgheight);
 
 			databufnew = (char*)calloc(image->imageSize+3*sizeof(unsigned int), sizeof(char));
 			if (!databufnew)	
@@ -164,7 +248,7 @@ int recvdecode(void)
 			cvReleaseImage(&image);
 			image = imagenew;
 
-			if (bDynamicWindowResizing) cvResizeWindow("Client", videoimgwidth, videoimgheight);
+			if (bWindowResizedFromServer) cvResizeWindow("Client", videoimgwidth, videoimgheight);
 
 			databufnew = (char*)calloc(image->imageSize+3*sizeof(unsigned int), sizeof(char));
 			if (!databufnew)	
