@@ -1,0 +1,8 @@
+<html>
+<head>
+    <title>MJPEG</title>
+</head>
+<body>
+    <img src="http://127.0.0.1:4014" alt="MJPEG" />
+</body>
+</html>
